src/client/app/styles/main.css
/* BELOCAL STYLES */

@media (max-width: 768px) {
  .navbar-form {
    width: auto;
    padding-top: 0;
    padding-bottom: 0;
    margin-right: 0;
    margin-left: 0;
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
  }
  .navbar-toggle {
    margin-left: 15px;
  }
}

.radio-padding-right {
  padding-right: 15px;
}

#item-image {
  display: inline;
}

.no-bottom-margin {
  margin-bottom: 0px;
}

.no-top-margin {
  margin-top: 0px;
}

.container-md {
  text-align: right;
}

.container-trending {
  text-align: center;
}

.product-card {
  max-width: 485px;
  margin-right: auto;
  margin-left: auto;
}

.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
  background-color: #8ed41e;
}

.btn-action {
  margin-right: 15px;
}

.nav > li > a {
  color: #8ed41e;
}

.nav-pills-home > li > a {
 border-radius: 0px !important; 
}

.price {
  color: #78c042;
}

.full-width-tabs > ul.nav.nav-pills {
    display: table;
    width: 100%;
    table-layout: fixed; /* To make all "columns" equal width regardless of content */
}
.full-width-tabs > ul.nav.nav-pills > li {
    float: none;
    display: table-cell;
}
.full-width-tabs > ul.nav.nav-pills > li > a {
    text-align: center;
}

.container-home-page {
  margin-top: 25px;
  max-width: 1170px !important;
}

.full-width {
  width: 100%;
}

.alert {
  width: 100%;
  position: fixed;
  z-index: 2000;
  top: 52px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;  
}

.navbar-nav.navbar-right:last-child {
  margin-right: 0px !important;
}

.beLocal-highlight {
  color: #8ed41e;
  font-weight: bold;
}

.beLocal-search {
  width:600px;
}

.pointer {
  cursor: pointer;
}

.beLocal-header {
  background-image: url("/images/header-grass-fixed.jpg");
  background-position-x: center;
  background-position-y: 70%;
  background-size: 100%;
  height: 325px;
  margin-bottom: 0px;
}

.beLocal-header-seller {
  background-position-x: center;
  height: 300px;
  margin-bottom: -25px;
  background-image: url("/images/sellerbanner-peas.jpg");
  background-size:1500px;
  background-position-x: center;
  background-position-y: 37%;
}

.navbar-footer {
  border-top: none;
  position:absolute;
  bottom: 0px;
  height: 85px;
  width: 100%;
  background-color: rgba(0,0,0,0.6);
  display:table;
}

.navbar-footer p {
  display:table-cell;
  vertical-align:middle;
  color:white;
  padding-left: 20px;
  font-size: 18pt;
  font-family: 'Bitter', serif; 
}

.beLocal-btn {
  background-color: white !important;
  border: 1px solid #8ed41e !important;
  color: #8ed41e !important;
}

.beLocal-btn:hover {
  background-color: #fafafa;
  border: 1px solid #8ed41e;
  color: #8ed41e;
}

.beLocal-btn-filled {
  background-color: #8ed41e;
  color: white !important;
}

.beLocal-btn-filled:hover {
  background-color: #89cc1d;
  color: white;
}

/*TWITCKER STYLES */

#twitcker-bar {
  background: #FAFAFA !important;
  border: none !important;
}

div.box {
  background: #8ed41e !important;
}

div.box a {
  color: white !important;
}

/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }
  
  .col-trending {
    text-align: center;
  }  

  .trending-caption {
    text-align: left !important;
  }  
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Customize container */
@media (max-width: 768px) {

  .sign-in-form {
    padding-left: 0px;
  }

  .product-card {
    max-width: 335px;
    margin-right: auto;
    margin-left: auto;
  }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

/* NAVBAR COLLAPSE */
@media (max-width: 970px) {
    .sign-in-form {
        float: none !important;      
    }
    .navbar-header {
        float: none;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin-top: 7.5px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
        display:block !important;
    }
}

/* SELLER UI STARTS */

.seller-Avatar  {
    height: 0px;
    z-index: 0;
} 

.AvatarContainer  {
    top: -200px;
    position:relative;
    text-align: center;
    border-color: black;
    border: 2px;
} 

.AvatarContainer img {
   padding:5px;
   border:1px solid #696969;
   background-color: #FFFFFF;
   border-radius: 5px;
   height: 100%;
   width: 100%;
   min-height: 190px;
   min-width:190px;
   max-width: 250px;
   max-height: 250px;
}

.seller-Name {
  height: 0px;
  top:-75px;
  color: #FFFFFF;
  text-shadow: 0 0 5px #696969;
}

.seller-tabs {
  padding-bottom: 0px;
  z-index: -1;
  background-color: #F1F1F1;
}

/*seller-ui stuff*/
/* Customize container */
.container-seller {
  max-width: 970px !important;
}

.seller-item-stock {
  vertical-align: center;
  border-top: 1px solid #dddddd;
  padding-top: 5px;
  padding-bottom: 5px;
}

.seller-item {
  text-align: right !important;
}

.seller-item-stock input[type="radio"]{
  margin-left:25px;
  text-align: right !important;
}



@media (max-width: 768px) {
  .seller-Name {
      text-align: center !important;
  }

  .seller-title-bar {
    padding-left: 10px !important;
    padding-right: 10px !important;
  }

  .thumbnail {
    text-align: center !important;
    float: none !important;
    display: inline-block;
  }

  .container-md {
    text-align: center !important;
  }

  .seller-item-stock {
    text-align: left;
  }

  .item-content-container{
    padding-left: 0px !important;
  }
}

.edit-button-container {
  text-align: right;
  vertical-align: center;
}

.add-new-button-container {
  top:15px;
  text-align: right;
  padding-right: 15px;
}

.seller-title-bar{
  padding-left: 0px;
  padding-right: 0px;
}

.all-locations {
  background-color: #F1F1F1;
}

.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
  background-color: #FFFFFF;
  color: #89cc1d;
}

.seller-title-bar {
  display: inline !important;
}

.nav > li > a {
  color: #A5A5A5;
}

.nav-pills li {
text-decoration: none;
font-weight: bold;
border-radius:0px;
border-left: 2px solid #EBEBEB !important;
color: #000 !important;
}
.nav-pills > li > a{
    border-radius:0px;
}

.edit-text {
  color:#8ed41e;
  padding: 5px;
}

.well {
  padding-bottom: 5px;
}

.edit-text-container {
  text-align: right;
}

.edit-text:hover {
  color:#89cc1d;
  cursor: pointer;
  font-weight: bold;
}

.list-group-item {
  padding-bottom: 0px !important;
}

.item-content-container {
  padding-left: 15px;

}

.seller-item-list {
  padding: 5px;
  vertical-align: center;
}

/* SELLER UI ENDS*/




/*VENDOR DETAILS UI*/

.panel-heading {
  color: #F8F8F8;
}

.container-vendor-details{
  padding: 0px 30px 0px 30px !important;
}

.breadcrumbs{
  color: #89cc1d;
  font-size: 15px !important;
  font-family: "Guardian-EgypTT";
}

.panel-group {
  padding: 0px 0px 0px 10px;
}


.panel-heading:hover {
  cursor: pointer;
  background-color: #F3f3f3;
}

.faded-box-edge {
    border: 6px solid #E4F3DA !important;
    padding: 15px;
    border-radius: 7px;
}

.HeaderText {
  font-size: 15px;
  padding: 0px;
  color: #777777;
}

.seller-name-text {
  color: #000000;
  font-size: 30px;
}

.vendorAvatar img{
  padding:5px;
  border: 1px solid #dddddd !important;
  border-radius: 5px;
  max-height: 200px;
  max-width: 200px;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  background-color: #FFFFFF;

}

.hr {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
  margin-top: 0px !important;
  margin-bottom: 0px !important;

}

.icon-map-styles {
  font-size: 40px;
  color: #dddddd !important;
  text-align: center;
}

.seller-Details-Jumbotron{
  background: #E4F3DA;
  text-align: left;
  padding-bottom: 20px !important;
  border-bottom: 3px solid #89cc1d !important;
}

.text-align-right {
  text-align: right;
}

.container-display-vendor-name{
  color: #696969 !important;
  padding-left: 15px;
  font-size: 12px;
  padding-top: 0px;
}

.container-display-vendor-name a{
  color: #696969 !important;
  font-size: 12px;
}

.vendor-details-items img{
  width: 100%;
}

.toggle-more-info {
  color: #89cc1d;
}

.blah {
  background-color: red;
}

.beLocal-searchProducts{
  width:100%;
}

.dropdown-productFilter{
  color: #696969;
}


.dropdown-productFilter, a:hover, a:focus{
  color: #696969;
  text-decoration: none;
  background-color: transparent !important;
  padding-top: 5px;
}


@media (max-width: 768px) {
  .seller-Details-Jumbotron {
      text-align: center !important;
      padding: 40px 0px 5px 0px!important;
  }

  .vendorAvatar img{
    max-height: 150px;
    max-width: 150px;
  }
}

